# ded

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
shaders/: simple_epic.frag
src/: common.c  common.h  editor.c  free_glyph.c  free_glyph.h  lexer.h  main.c  simple_renderer.c  simple_renderer.h
